--- a/app/views/users/_review_dashboard_panel.html.erb
+++ b/app/views/users/_review_dashboard_panel.html.erb
@@ -19,7 +19,12 @@
 			<div class="align-right">
 				<div class="file-name"><i class="mdi mdi-file"></i> <span class=""> <%= link_to  file_name,  content.url %></span></div>
 				<%if admin === true  %>
+				<% if current_user.progress_status.include? "during" %>
+						<% current_dm = DuringLA.where(user_id: current_user.id, during_la_version: current_user.current_during_la_version).first %>
+						<%= button_to "Delete", user_file_delete_admin_url(:id => current_user.id, :attachment => name, :current_dm_version => current_user.current_during_la_version), :method=> :delete, :class => "custom-button" , :form_class =>   "deletion" %>
+				<% else %>
 					<%= button_to "Delete", user_file_delete_admin_url(:id => current_user.id, :attachment => name), :method=> :delete, :class => "custom-button" , :form_class =>   "deletion" %>
+				<% end %>
 			<%end%>
 				<a href="<%=  content.url%>" download="<%=  file_name %>"><button class="custom-button primary">Download</button></a>
 			</div>
@@ -27,15 +32,25 @@
 	<% else %>
 		<div class="collapsible">
 			<%if admin === true  %>
-				<%= form_for current_user, url: user_review_file_upload_after_path(:user_to_edit => current_user), html: { multipart: true , }, :method => :POST do |form| %>
-					
-				<div class="align-right">
-					<div class="file-name">
-						<%= form.file_field name %>
+				<% if current_user.progress_status.include? "during" %>
+					<% current_dm = DuringLA.where(user_id: current_user.id, during_la_version: current_user.current_during_la_version).first %>
+					<%= form_for :current_dm, url: user_review_file_upload_during_path(:user_to_edit => current_user), html: { multipart: true }, :method => :POST do |form| %>
+						<div class="align-right">
+							<div class="file-name">
+								<%= form.file_field name %>
+							</div>
+							<%= form.submit "Upload", :class => "custom-button primary" %>
+						</div>
+					<% end %>
+				<% else %>
+					<%= form_for current_user, url: user_review_file_upload_after_path(:user_to_edit => current_user), html: { multipart: true , }, :method => :POST do |form| %>
+					<div class="align-right">
+						<div class="file-name">
+							<%= form.file_field name %>
+						</div>
+						<%= form.submit "Upload", :class => "custom-button primary" %>
 					</div>
-					<%= form.submit "Upload", :class => "custom-button primary" %>
-				</div>
-
+					<% end %>
 				<% end %>
 			<%else%>
 				<p class="no-results">Not yet uploaded</p>
