--- a/app/views/users/user_dashboard_before.html.erb
+++ b/app/views/users/user_dashboard_before.html.erb
@@ -10,11 +10,11 @@
 <% else %>
 	<div class="align-center">
         <% if current_user.progress_status.include? "after"%>
-            <a href="<%="#{RELATIVE_URL}/user_dashboard/before"%>"><button class='custom-button primary'>Before the Mobility</button></a>
-            <a href="<%="#{RELATIVE_URL}/user_dashboard/during"%>"><button class='custom-button primary'>During the Mobility</button></a>
+            <a href="<%="#{RELATIVE_URL}/user_dashboard/before"%>"><button class='custom-button primary' disabled>Before the Mobility</button></a>
+            <a href="<%="#{RELATIVE_URL}/user_dashboard/during"%>"><button class='custom-button primary' disabled>During the Mobility</button></a>
             <a href="<%="#{RELATIVE_URL}/user_dashboard/after"%>"><button class='custom-button primary'>After the Mobility</button></a>
-        <% elsif current_user.progress_status.include? "during"%>%>
-            <a href="<%="#{RELATIVE_URL}/user_dashboard/before"%>"><button class='custom-button primary'>Before the Mobility</button></a>
+        <% elsif current_user.progress_status.include? "during"%>
+            <a href="<%="#{RELATIVE_URL}/user_dashboard/before"%>"><button class='custom-button primary' disabled>Before the Mobility</button></a>
             <a href="<%="#{RELATIVE_URL}/user_dashboard/during"%>"><button class='custom-button primary'>During the Mobility</button></a>
             <a href="<%="#{RELATIVE_URL}/user_dashboard/after"%>"><button class='custom-button primary' disabled>After the Mobility</button></a>
         <% else%>
@@ -210,15 +210,15 @@
 
 
 
-	<% elsif current_user.progress_status == "finished" %>
-		<h1> Intenational office has been notified and they will contact back soon. </h1>
-	<% elsif current_user.progress_status == "accepted" %>
-		<h1> Your request was successfully completed and accepted. </h1>
+	<% elsif current_user.progress_status == "before_finished" %>
+		<h2> The intenational office has been notified and they will get back to you soon. </h2>
+	<% elsif current_user.progress_status == "before_accepted" %>
+		<h2> Your request was successfully completed and accepted. </h2>
 		<a href="<%= "#{RELATIVE_URL}/generate_acceptance_letter/#{current_user.id}.pdf"%>" download>
 			<button id="acceptance_letter_button" class="custom-button primary">Download acceptance letter</button>
 		</a>
 		<iframe id="acceptance_letter" src="<%= "#{RELATIVE_URL}/generate_acceptance_letter/#{current_user.id}"%>"/>
-	<% elsif current_user.progress_status == "rejected" %>
+	<% elsif current_user.progress_status == "before_rejected" %>
 		<h1> Your request has been rejected </h1>
 	<%else%>
 		<h1></h1>
@@ -226,7 +226,7 @@
 	</div>
 	<p class="intro-paragraph  footer-paragraph s12">
 	<% if current_user.role == "user" && current_user.progress_status == "before_in_process" && current_user.percentage_num.to_i == 100 %>
-		<%= button_to "Finish Application", user_finish_application_form_path, data: {confirm: "This action will submit your application form and send an email to notify International Office, are you sure?" }, :method=> :post, :class => "custom-button primary ", :form_class => "finish_app" %>
+		<%= button_to "Finish Application", user_finish_application_form_path, data: {confirm: "This action will submit your application form and send an email to notify the International Office, are you sure?" }, :method=> :post, :class => "custom-button primary ", :form_class => "finish_app", params: {:user => current_user} %>
 	<% end %>
 	</p>
 <%end%>
